--- a/judo_profiles/users/templates/login.html
+++ b/judo_profiles/users/templates/login.html
@@ -1,8 +1,20 @@
 <html>
-    <form method="post">
-        {% csrf_token %}
-        <input type="text" name="user">
-        <input type="password" name="pass">
-        <input type="submit">
-    </form>
+    <body>
+        {% if next %}
+            {% if user.is_authenticated %}
+                <p>Your account doesn't have access to this page. To proceed,
+                please login with an account that has access.</p>
+            {% else %}
+                <p>Please login to see this page.</p>
+            {% endif %}
+        {% endif %}
+
+        <form method="post">
+            {% csrf_token %}
+            <input type="text" name="user">
+            <input type="password" name="pass">
+            <input type="submit" value="login">
+            <input type="hidden" name="next" value="{{ next }}">
+        </form>
+    </body>
 </html>
