--- a/judo_profiles/main/templates/manage.html
+++ b/judo_profiles/main/templates/manage.html
@@ -1,68 +1,80 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
+    <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    </head>
     <body>
-        <h1>Permissions</h1>
-        <form method="post">
-            {% csrf_token %}
-            {% load guardian_tags %}
-            <div id="view">
-                <h3>View</h3>
-                <select name="view_users" multiple>
-                    {% for user in users %}
-                        {% get_obj_perms user for fighter as "fighter_perms" %}
-                        {% if "view_fighter" in fighter_perms %}
-                            <option value="{{ user.id }}" selected>{{ user }}</option>
-                        {% else %}
-                            <option value="{{ user.id }}">{{ user }}</option>
-                        {% endif %}
-                    {% endfor %}
-                </select>
-            </div>
-            <div id="edit">
-                <h3>Edit</h3>
-                <select name="edit_users" multiple>
-                    {% for user in users %}
-                        {% get_obj_perms user for fighter as "fighter_perms" %}
-                        {% if "change_fighter" in fighter_perms %}
-                            <option value="{{ user.id }}" selected>{{ user }}</option>
-                        {% else %}
-                            <option value="{{ user.id }}">{{ user }}</option>
-                        {% endif %}
-                    {% endfor %}
-                </select>
-            </div>
-            <div id="manage">
-                <h3>Manage (this page)</h3>
-                <select name="manage_users" multiple>
-                    {% for user in users %}
-                        {% get_obj_perms user for fighter as "fighter_perms" %}
-                        {% if "manage_fighter" in fighter_perms %}
-                            <option value="{{ user.id }}" selected>{{ user }}</option>
-                        {% else %}
-                            <option value="{{ user.id }}">{{ user }}</option>
-                        {% endif %}
-                    {% endfor %}
-                </select>
-            </div>
-            <br>
-            <button>Speichern</button>
-            <br><br>
-
-        </form>
-        {% if user == fighter.created_by %}
-            {% if fighter.user == None %}
-                <form method="post">
-                    {% csrf_token %}
-                    <input type="password" name="password">
-                    <input type="password" name="password_confirm">
-                    <button>Nutzer zum Profil hinzufügen</button>
-                </form>
-            {% else %}
-                <form method="post">
-                    {% csrf_token %}
-                <button name="delete">Nutzer "{{ fighter.user }}" entfernen</button>
+        <div class="container">
+            <h1>Permissions</h1>
+            <form method="post">
+                {% csrf_token %}
+                {% load guardian_tags %}
+                <div id="view">
+                    <h3>View</h3>
+                    <select name="view_users" multiple>
+                        {% for user in users %}
+                            {% get_obj_perms user for fighter as "fighter_perms" %}
+                            {% if "view_fighter" in fighter_perms %}
+                                {% if user == fighter.user %}
+                                    <option value="{{ user }}" selected>{{ user }} (Profil)</option>
+                                {% else %}
+                                    <option value="{{ user }}" selected>{{ user }}</option>
+                                {% endif %}
+                            {% else %}
+                                <option value="{{ user }}">{{ user }}</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+                </div>
+                <div id="edit">
+                    <h3>Edit</h3>
+                    <select name="edit_users" multiple>
+                        {% for user in users %}
+                            {% get_obj_perms user for fighter as "fighter_perms" %}
+                            {% if "change_fighter" in fighter_perms %}
+                                <option value="{{ user }}" selected>{{ user }}</option>
+                            {% else %}
+                                <option value="{{ user }}">{{ user }}</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+                </div>
+                <div id="manage">
+                    <h3>Manage (this page)</h3>
+                    <select name="manage_users" multiple>
+                        {% for user in users %}
+                            {% get_obj_perms user for fighter as "fighter_perms" %}
+                            {% if "manage_fighter" in fighter_perms %}
+                                <option value="{{ user }}" selected>{{ user }}</option>
+                            {% else %}
+                                <option value="{{ user }}">{{ user }}</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+                </div>
+                <br>
+                <button>Speichern</button>
+                <br><br>
+            </form>
+        </div>
+        <div class="container">
+            {% if user == fighter.created_by %}
+                {% if fighter.user == None %}
+                    <form method="post">
+                        {% csrf_token %}
+                        <input type="password" name="password">
+                        <input type="password" name="password_confirm">
+                        <button>Nutzer zum Profil hinzufügen</button>
+                    </form>
+                {% else %}
+                    <form method="post">
+                        {% csrf_token %}
+                        <button name="delete">Nutzer "{{ fighter.user }}" entfernen</button>
+                    </form>
+                {% endif %}
             {% endif %}
-        {% endif %}
+        </div>
     </body>
 </html>
