--- a/judo_profiles/profiles/templates/profile_base.html
+++ b/judo_profiles/profiles/templates/profile_base.html
@@ -86,29 +86,41 @@
                         <table id="own">
                             <caption id="own_techniques">Eigene Techniken</caption>
                             <tr>
-                                <td class="own_techniques" id="own0">
-                                    {% block own0 %}{% endblock %}
+                                <td>
+                                    <table class="own_techniques" id="own0">
+                                        {% block own0 %}{% endblock %}
+                                    </table>
                                 </td>
                             </tr>
                             <tr>
-                                <td class="own_techniques" id="own5">
-                                    {% block own5 %}{% endblock %}
+                                <td>
+                                    <table class="own_techniques" id="own5">
+                                        {% block own5 %}{% endblock %}
+                                    </table>
                                 </td>
-                                <td class="own_techniques" id="own1">
-                                    {% block own1 %}{% endblock %}
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="own_techniques" id="own4">
-                                    {% block own4 %}{% endblock %}
-                                </td>
-                                <td class="own_techniques" id="own2">
-                                    {% block own2 %}{% endblock %}
+                                <td>
+                                    <table class="own_techniques" id="own1">
+                                        {% block own1 %}{% endblock %}
+                                    </table>
                                 </td>
                             </tr>
                             <tr>
-                                <td class="own_techniques" id="own3">
-                                    {% block own3 %}{% endblock %}
+                                <td>
+                                    <table class="own_techniques" id="own4">
+                                        {% block own4 %}{% endblock %}
+                                    </table>
+                                </td>
+                                <td>
+                                    <table class="own_techniques" id="own2">
+                                        {% block own2 %}{% endblock %}
+                                    </table>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <table class="own_techniques" id="own3">
+                                        {% block own3 %}{% endblock %}
+                                    </table>
                                 </td>
                             </tr>
                         </table>
