--- a/judo_profiles/profiles/templates/edit.html
+++ b/judo_profiles/profiles/templates/edit.html
@@ -67,6 +67,7 @@
                 pos.dataset["x"]
             )
             position.addEventListener("mousedown", mouseDownPos)
+            image.addEventListener("mousedown", mouseDownImg)
             position.setAttribute("data-id", pos.dataset["model_id"])
         })
 
