--- a/judo_profiles/profiles/templates/profile_base.html
+++ b/judo_profiles/profiles/templates/profile_base.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">-->
+        <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>-->
         <link rel="stylesheet" href="{% static "style/main.css" %}">
         {% block style %}{% endblock %}
         <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
@@ -43,41 +45,39 @@
         <table id="main">
             <tr>
                 <td>
-                    <div id="visual">
-                        <div id="positions">
-                            <table>
-                                <tr>
-                                    <td>
-                                        <p id="image_desc">Griffpositionen</p>
-                                        {% block delete_positions %}{% endblock %}
-                                    </td>
-                                    <td id="choices">
-                                        <a>Rechte Hand =</a>
-                                        <div class="r position option 1" id="oR1">1</div>
-                                        <div class="r position option 2" id="oR2">2</div>
-                                        <div class="r position option 3" id="oR3">3</div>
-                                        <div class="r position option 4" id="oR4">4</div>
-                                        <br>
-                                        <br>
-                                        <a>Linke Hand =</a>
-                                        <div class="l position option 1" id="oL1">1</div>
-                                        <div class="l position option 2" id="oL2">2</div>
-                                        <div class="l position option 3" id="oL3">3</div>
-                                        <div class="l position option 4" id="oL4">4</div>
-                                    </td>
-                                </tr>
-                            </table>
-                            <div id="image_container" style="background-image: url('{% static "image/image.svg" %}');">
-                                <img src="{% static "image/image.svg" %}" id="image">
-                                <div class="r move position 1" id="pR1">1</div>
-                                <div class="r move position 2" id="pR2">2</div>
-                                <div class="r move position 3" id="pR3">3</div>
-                                <div class="r move position 4" id="pR4">4</div>
-                                <div class="l move position 1" id="pL1">1</div>
-                                <div class="l move position 2" id="pL2">2</div>
-                                <div class="l move position 3" id="pL3">3</div>
-                                <div class="l move position 4" id="pL4">4</div>
-                            </div>
+                    <div id="positions">
+                        <table>
+                            <tr>
+                                <td>
+                                    <p id="image_desc">Griffpositionen</p>
+                                    {% block delete_positions %}{% endblock %}
+                                </td>
+                                <td id="choices">
+                                    <a>Rechte Hand =</a>
+                                    <div class="r position option 1" id="oR1">1</div>
+                                    <div class="r position option 2" id="oR2">2</div>
+                                    <div class="r position option 3" id="oR3">3</div>
+                                    <div class="r position option 4" id="oR4">4</div>
+                                    <br>
+                                    <br>
+                                    <a>Linke Hand =</a>
+                                    <div class="l position option 1" id="oL1">1</div>
+                                    <div class="l position option 2" id="oL2">2</div>
+                                    <div class="l position option 3" id="oL3">3</div>
+                                    <div class="l position option 4" id="oL4">4</div>
+                                </td>
+                            </tr>
+                        </table>
+                        <div id="image_container" style="background-image: url('{% static "image/image.svg" %}');">
+                            <img src="{% static "image/image.svg" %}" id="image">
+                            <div class="r move position 1" id="pR1">1</div>
+                            <div class="r move position 2" id="pR2">2</div>
+                            <div class="r move position 3" id="pR3">3</div>
+                            <div class="r move position 4" id="pR4">4</div>
+                            <div class="l move position 1" id="pL1">1</div>
+                            <div class="l move position 2" id="pL2">2</div>
+                            <div class="l move position 3" id="pL3">3</div>
+                            <div class="l move position 4" id="pL4">4</div>
                         </div>
                     </div>
                 </td>
@@ -130,19 +130,19 @@
         </table>
         <table id="ranks">
             <tr>
-                <td>
+                <td class="small_rank">
                     <table id="special_rank">
                         <caption>Spezialtechniken</caption>
                         {% block special %}{% endblock %}
                     </table>
                 </td>
-                <td>
+                <td class="small_rank">
                     <table id="ground_rank">
                         <caption>Bodentechniken</caption>
                         {% block ground %}{% endblock %}
                     </table>
                 </td>
-                <td>
+                <td class="big_rank">
                     <table id="combination_rank">
                         <caption>Kombinationen</caption>
                         {% block combination %}{% endblock %}
