--- a/judo_profiles/profiles/templates/profile_base.html
+++ b/judo_profiles/profiles/templates/profile_base.html
@@ -44,7 +44,7 @@
         </div>
         <table id="main">
             <tr>
-                <td>
+                <td class="pos">
                     <div id="positions">
                         <table>
                             <tr>
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                 </td>
-                <td>
+                <td class="own_t">
                     <div id="own_container">
                         <table id="own">
                             <caption id="own_techniques">Eigene Techniken</caption>
