--- a/judo_profiles/profiles/templates/manage.html
+++ b/judo_profiles/profiles/templates/manage.html
@@ -1,80 +1,100 @@
+{% extends "base.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html>
-    <head>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <div class="container">
-            <h1>Permissions</h1>
-            <form method="post">
-                {% csrf_token %}
-                {% load guardian_tags %}
-                <div id="view">
-                    <h3>View</h3>
-                    <select name="view_users" multiple>
-                        {% for user in users %}
-                            {% get_obj_perms user for fighter as "fighter_perms" %}
-                            {% if "view_fighter" in fighter_perms %}
-                                {% if user == fighter.user %}
-                                    <option value="{{ user }}" selected>{{ user }} (Profil)</option>
-                                {% else %}
-                                    <option value="{{ user }}" selected>{{ user }}</option>
-                                {% endif %}
+
+{% block title %}Profil von {{ profile.name }} verwalten{% endblock %}
+
+{% block content %}
+    <div class="container">
+        <h1>Permissions</h1>
+        <form method="post">
+            {% csrf_token %}
+            {% load guardian_tags %}
+            <div id="view">
+                <h3>View</h3>
+                <select class="form-control" name="view_users" multiple>
+                    {% for user in users %}
+                        {% get_obj_perms user for profile as "profile_perms" %}
+                        {% if "view_profile" in profile_perms %}
+                            {% if user == profile.user %}
+                                <option value="{{ user }}" selected>{{ user }} (Profil)</option>
                             {% else %}
-                                <option value="{{ user }}">{{ user }}</option>
-                            {% endif %}
-                        {% endfor %}
-                    </select>
-                </div>
-                <div id="edit">
-                    <h3>Edit</h3>
-                    <select name="edit_users" multiple>
-                        {% for user in users %}
-                            {% get_obj_perms user for fighter as "fighter_perms" %}
-                            {% if "change_fighter" in fighter_perms %}
                                 <option value="{{ user }}" selected>{{ user }}</option>
-                            {% else %}
-                                <option value="{{ user }}">{{ user }}</option>
                             {% endif %}
-                        {% endfor %}
-                    </select>
-                </div>
-                <div id="manage">
-                    <h3>Manage (this page)</h3>
-                    <select name="manage_users" multiple>
-                        {% for user in users %}
-                            {% get_obj_perms user for fighter as "fighter_perms" %}
-                            {% if "manage_fighter" in fighter_perms %}
-                                <option value="{{ user }}" selected>{{ user }}</option>
-                            {% else %}
-                                <option value="{{ user }}">{{ user }}</option>
-                            {% endif %}
-                        {% endfor %}
-                    </select>
-                </div>
-                <br>
-                <button>Speichern</button>
-                <br><br>
-            </form>
-        </div>
-        <div class="container">
-            {% if user == fighter.created_by %}
-                {% if fighter.user == None %}
-                    <form method="post">
-                        {% csrf_token %}
-                        <input type="password" name="password">
-                        <input type="password" name="password_confirm">
-                        <button>Nutzer zum Profil hinzufügen</button>
-                    </form>
-                {% else %}
-                    <form method="post">
-                        {% csrf_token %}
-                        <button name="delete">Nutzer "{{ fighter.user }}" entfernen</button>
-                    </form>
-                {% endif %}
+                        {% else %}
+                            <option value="{{ user }}">{{ user }}</option>
+                        {% endif %}
+                    {% endfor %}
+                </select>
+            </div>
+            <div id="edit">
+                <h3>Edit</h3>
+                <select class="form-control" name="edit_users" multiple>
+                    {% for user in users %}
+                        {% get_obj_perms user for profile as "profile_perms" %}
+                        {% if "change_profile" in profile_perms %}
+                            <option value="{{ user }}" selected>{{ user }}</option>
+                        {% else %}
+                            <option value="{{ user }}">{{ user }}</option>
+                        {% endif %}
+                    {% endfor %}
+                </select>
+            </div>
+            <div id="manage">
+                <h3>Manage</h3>
+                <select class="form-control" name="manage_users" multiple>
+                    {% for user in users %}
+                        {% get_obj_perms user for profile as "profile_perms" %}
+                        {% if "manage_profile" in profile_perms %}
+                            <option value="{{ user }}" selected>{{ user }}</option>
+                        {% else %}
+                            <option value="{{ user }}">{{ user }}</option>
+                        {% endif %}
+                    {% endfor %}
+                </select>
+            </div>
+            <br>
+            <button class="btn btn-secondary">Speichern</button>
+            <br><br>
+        </form>
+    </div>
+    <div class="container">
+        {% if user == profile.created_by %}
+            {% if not profile.user %}
+                <form method="post">
+                    {% csrf_token %}
+                    <button class="btn btn-secondary" name="add">Token für neue/n Nutzer*in</button>
+                </form>
+            {% else %}
+                <form method="post">
+                    {% csrf_token %}
+                    {% if profile.user.token %}
+                        {% if profile.user.token.expired %}
+                            <p>Token abgelaufen, ohne, dass er verwendet wurde</p>
+                        {% else %}
+                            <button id="toggle" class="btn btn-secondary" onclick="toggle_token(); return false;" data-bs-toggle="button">Token anzeigen</button>
+                            <p>
+                                Token: <span id="token" class="invisible">{{ profile.user.token }}</span>
+                            </p>
+                            <script>
+                                function toggle_token(){
+                                    let classes = document.getElementById("token").classList
+                                    let button = document.getElementById("toggle")
+                                    if (classes[0] == "invisible"){
+                                        classes.remove("invisible")
+                                        button.innerHTML = "Token verstecken"
+                                    } else {
+                                        classes.add("invisible")
+                                        button.innerHTML = "Token anzeigen"
+                                    }
+                                }
+                            </script>
+                        {% endif %}
+                        <button class="btn btn-secondary" name="delete">Token löschen</button>
+                    {% else %}
+                        <button class="btn btn-secondary" name="delete">Nutzer entfernen</button>
+                    {% endif %}
+                </form>
             {% endif %}
-        </div>
-    </body>
-</html>
+        {% endif %}
+    </div>
+{% endblock %}
