--- a/judo_profiles/profiles/templates/new.html
+++ b/judo_profiles/profiles/templates/new.html
@@ -40,47 +40,47 @@
 {% endblock %}
 
 {% block delete_positions %}
-    <button id="delete" class="btn btn-danger" onclick="delClick()">Löschen</button>
+    <button id="delete" class="btn btn-outline-danger btn-sm" data-bs-toggle="button" onclick="delClick()">Löschen</button>
 {% endblock %}
 
 {% block own0 %}
     <tr><td>
-        <button class="btn btn-success" onclick="add_own(0)">+</button>
+        <button class="btn btn-success btn-sm" onclick="add_own(0)">+</button>
     </td></tr>
 {% endblock %}
 
 {% block own1 %}
     <tr><td>
-        <button class="btn btn-success" onclick="add_own(1)">+</button>
+        <button class="btn btn-success btn-sm" onclick="add_own(1)">+</button>
     </td></tr>
 {% endblock %}
 
 {% block own2 %}
     <tr><td>
-        <button class="btn btn-success" onclick="add_own(2)">+</button>
+        <button class="btn btn-success btn-sm" onclick="add_own(2)">+</button>
     </td></tr>
 {% endblock %}
 
 {% block own3 %}
     <tr><td>
-        <button class="btn btn-success" onclick="add_own(3)">+</button>
+        <button class="btn btn-success btn-sm" onclick="add_own(3)">+</button>
     </td></tr>
 {% endblock %}
 
 {% block own4 %}
     <tr><td>
-        <button class="btn btn-success" onclick="add_own(4)">+</button>
+        <button class="btn btn-success btn-sm" onclick="add_own(4)">+</button>
     </td></tr>
 {% endblock %}
 
 {% block own5 %}
     <tr><td>
-        <button class="btn btn-success" onclick="add_own(5)">+</button>
+        <button class="btn btn-success btn-sm" onclick="add_own(5)">+</button>
     </td></tr>
 {% endblock %}
 
 {% block special %}
-    <button class="btn btn-success" onclick="add_rank_item('special')">+</button>
+    <button class="btn btn-success btn-sm" onclick="add_rank_item('special')">+</button>
     <tr>
         <td id="special1" class="special"></td>
     </tr>
@@ -96,7 +96,7 @@
 {% endblock %}
 
 {% block ground %}
-    <button class="btn btn-success" onclick="add_rank_item('ground')">+</button>
+    <button class="btn btn-success btn-sm" onclick="add_rank_item('ground')">+</button>
     <tr>
         <td id="ground1" class="ground"></td>
     </tr>
@@ -112,7 +112,7 @@
 {% endblock %}
 
 {% block combination %}
-    <button class="btn btn-success" onclick="add_rank_item('combination')">+</button>
+    <button class="btn btn-success btn-sm" onclick="add_rank_item('combination')">+</button>
     <tr>
         <td id="combination1" class="combination"></td>
     </tr>
