--- a/judo_profiles/profiles/templates/profile_base.html
+++ b/judo_profiles/profiles/templates/profile_base.html
@@ -137,19 +137,19 @@
     </table>
     <table id="ranks">
         <tr>
-            <td class="small_rank">
+            <td class="rank">
                 <table id="special_rank">
                     <caption>Spezialtechniken</caption>
                     {% block special %}{% endblock %}
                 </table>
             </td>
-            <td class="small_rank">
+            <td class="rank">
                 <table id="ground_rank">
                     <caption>Bodentechniken</caption>
                     {% block ground %}{% endblock %}
                 </table>
             </td>
-            <td class="big_rank">
+            <td class="rank">
                 <table id="combination_rank">
                     <caption>Kombinationen</caption>
                     {% block combination %}{% endblock %}
