--- a/judo_profiles/profiles/templates/base.html
+++ b/judo_profiles/profiles/templates/base.html
@@ -11,6 +11,9 @@
     <body>
         <header>
             <a href="/">Home</a>
+            {% if request.user.profile %}
+                <a href="{{ request.user.profile.uuid }}">Eigenes Profil</a>
+            {% endif %}
             {% if request.user.is_authenticated %}
                 <a href="/auth/update">Passwort ändern</a>
                 <a href="/auth/logout">Abmelden</a>
@@ -21,7 +24,7 @@
             {% if request.user.is_superuser %}
                 <a href="/admin">Admin</a>
             {% endif %}
-            <button id="theme-selector" class="btn btn-secondary" onclick="change_color_theme()">Auto</button>
+            <button id="theme-selector" class="btn btn-secondary btn-sm" onclick="change_color_theme()">Auto</button>
         </header>
         <script>
             const dark_mode = window.matchMedia('(prefers-color-scheme: dark)')
