--- a/judo_profiles/profiles/templates/edit.html
+++ b/judo_profiles/profiles/templates/edit.html
@@ -52,7 +52,9 @@
 {% block opts_right %}{% if profile.primary_side != 1 %} checked {% endif %}{% endblock %}
 
 {% block buttons2 %}
-    <button class="btn btn-danger" onclick="if (confirm('Wirklich löschen?')){ post_data('delete') }">Löschen</button>
+    {% if request.user == profile.created_by %}
+        <button class="btn btn-danger" onclick="if (confirm('Profil wirklich unwiederruflich löschen?')){ post_data('delete') }">Löschen</button>
+    {% endif %}
     <button class="btn btn-secondary" onclick="location.href = location.href">Zurücksetzen</button>
     <button class="submit btn btn-secondary" data-type="save">Speichern</button>
 {% endblock %}
